Criação de formulário Classifica Pessoa

--- a/Projeto_LPRC5/Projeto_LPRC5.csproj
+++ b/Projeto_LPRC5/Projeto_LPRC5.csproj
@@ -33,7 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="MySql.Data, Version=8.0.22.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL" />
+    <Reference Include="MySql.Data, Version=8.0.23.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="classeClassificaPessoa.cs" />
     <Compile Include="classeDefault.cs" />
     <Compile Include="conexao.cs" />
     <Compile Include="conexaoMySql.cs" />
@@ -56,6 +57,12 @@
     </Compile>
     <Compile Include="frmAcesso.Designer.cs">
       <DependentUpon>frmAcesso.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmClassificaPessoa.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmClassificaPessoa.designer.cs">
+      <DependentUpon>frmClassificaPessoa.cs</DependentUpon>
     </Compile>
     <Compile Include="frmDefault.cs">
       <SubType>Form</SubType>
@@ -74,6 +81,9 @@
     <Compile Include="util.cs" />
     <EmbeddedResource Include="frmAcesso.resx">
       <DependentUpon>frmAcesso.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmClassificaPessoa.resx">
+      <DependentUpon>frmClassificaPessoa.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmDefault.resx">
       <DependentUpon>frmDefault.cs</DependentUpon>
