--- a/Projeto_LPRC5/Projeto_LPRC5.csproj
+++ b/Projeto_LPRC5/Projeto_LPRC5.csproj
@@ -98,6 +98,7 @@
     <Compile Include="conexao.cs" />
     <Compile Include="conexaoMySql.cs" />
     <Compile Include="dbDefault.cs" />
+    <Compile Include="dbTipoUsuario.cs" />
     <Compile Include="frmAcesso.cs">
       <SubType>Form</SubType>
     </Compile>
