--- a/Projeto_LPRC5/Projeto_LPRC5.csproj
+++ b/Projeto_LPRC5/Projeto_LPRC5.csproj
@@ -96,6 +96,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClasseEstado.cs" />
     <Compile Include="classeMarca.cs" />
     <Compile Include="classeCidade.cs" />
     <Compile Include="classeClassificaPessoa.cs" />
@@ -108,9 +109,22 @@
     <Compile Include="dbCidade.cs" />
     <Compile Include="dbCor.cs" />
     <Compile Include="dbDefault.cs" />
+    <Compile Include="DbEstado.cs" />
     <Compile Include="dbFeriado.cs" />
     <Compile Include="dbMarca.cs" />
     <Compile Include="dbTipoUsuario.cs" />
+    <Compile Include="FrmEstado.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmEstado.designer.cs">
+      <DependentUpon>FrmEstado.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmDefault.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmDefault.designer.cs">
+      <DependentUpon>frmDefault.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmMarca.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -147,12 +161,6 @@
     <Compile Include="frmFeriado.designer.cs">
       <DependentUpon>frmFeriado.cs</DependentUpon>
     </Compile>
-    <Compile Include="frmDefault.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="frmDefault.designer.cs">
-      <DependentUpon>frmDefault.cs</DependentUpon>
-    </Compile>
     <Compile Include="frmPrincipal.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -169,6 +177,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="classeTipoUsuario.cs" />
     <Compile Include="util.cs" />
+    <EmbeddedResource Include="FrmEstado.resx">
+      <DependentUpon>FrmEstado.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmDefault.resx">
+      <DependentUpon>frmDefault.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmMarca.resx">
       <DependentUpon>frmMarca.cs</DependentUpon>
     </EmbeddedResource>
@@ -186,9 +200,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmFeriado.resx">
       <DependentUpon>frmFeriado.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="frmDefault.resx">
-      <DependentUpon>frmDefault.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmPrincipal.resx">
       <DependentUpon>frmPrincipal.cs</DependentUpon>
