--- a/Projeto_LPRC5/Projeto_LPRC5.csproj
+++ b/Projeto_LPRC5/Projeto_LPRC5.csproj
@@ -114,6 +114,7 @@
     <Compile Include="dbFeriado.cs" />
     <Compile Include="dbMarca.cs" />
     <Compile Include="dbTipoUsuario.cs" />
+    <Compile Include="dbVeiculoModelo.cs" />
     <Compile Include="FrmEstado.cs">
       <SubType>Form</SubType>
     </Compile>
