--- a/Projeto_LPRC5/Projeto_LPRC5.csproj
+++ b/Projeto_LPRC5/Projeto_LPRC5.csproj
@@ -115,6 +115,12 @@
     <Compile Include="dbMarca.cs" />
     <Compile Include="dbTipoUsuario.cs" />
     <Compile Include="dbVeiculoModelo.cs" />
+    <Compile Include="frmVeiculoModelo .cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmVeiculoModelo .designer.cs">
+      <DependentUpon>frmVeiculoModelo .cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmEstado.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -185,6 +191,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="classeTipoUsuario.cs" />
     <Compile Include="util.cs" />
+    <EmbeddedResource Include="frmVeiculoModelo .resx">
+      <DependentUpon>frmVeiculoModelo .cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FrmEstado.resx">
       <DependentUpon>FrmEstado.cs</DependentUpon>
     </EmbeddedResource>
