--- a/Projeto_LPRC5/Projeto_LPRC5.csproj
+++ b/Projeto_LPRC5/Projeto_LPRC5.csproj
@@ -104,6 +104,7 @@
     <Compile Include="classeCor.cs" />
     <Compile Include="classeFeriado.cs" />
     <Compile Include="classeDefault.cs" />
+    <Compile Include="ClasseVeiculo.cs" />
     <Compile Include="classeVeiculoModelo.cs" />
     <Compile Include="classeVisitantePrestador.cs" />
     <Compile Include="conexao.cs" />
@@ -116,6 +117,12 @@
     <Compile Include="dbMarca.cs" />
     <Compile Include="dbTipoUsuario.cs" />
     <Compile Include="dbVeiculoModelo.cs" />
+    <Compile Include="FrmVeiculo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmVeiculo.designer.cs">
+      <DependentUpon>FrmVeiculo.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmVeiculoModelo .cs">
       <SubType>Form</SubType>
     </Compile>
@@ -198,6 +205,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="classeTipoUsuario.cs" />
     <Compile Include="util.cs" />
+    <EmbeddedResource Include="FrmVeiculo.resx">
+      <DependentUpon>FrmVeiculo.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmVeiculoModelo .resx">
       <DependentUpon>frmVeiculoModelo .cs</DependentUpon>
     </EmbeddedResource>
