--- a/Projeto_LPRC5/Projeto_LPRC5.csproj
+++ b/Projeto_LPRC5/Projeto_LPRC5.csproj
@@ -96,6 +96,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClasseCadastroFuncionarios.cs" />
     <Compile Include="ClasseEstado.cs" />
     <Compile Include="classeEmpresaPrestadoraServico.cs" />
     <Compile Include="classeMarca.cs" />
@@ -117,6 +118,12 @@
     <Compile Include="dbMarca.cs" />
     <Compile Include="dbTipoUsuario.cs" />
     <Compile Include="dbVeiculoModelo.cs" />
+    <Compile Include="FrmCadastroFuncionarios.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmCadastroFuncionarios.Designer.cs">
+      <DependentUpon>FrmCadastroFuncionarios.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmVeiculo.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -205,6 +212,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="classeTipoUsuario.cs" />
     <Compile Include="util.cs" />
+    <EmbeddedResource Include="FrmCadastroFuncionarios.resx">
+      <DependentUpon>FrmCadastroFuncionarios.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FrmVeiculo.resx">
       <DependentUpon>FrmVeiculo.cs</DependentUpon>
     </EmbeddedResource>
