--- a/Projeto_LPRC5/Projeto_LPRC5.csproj
+++ b/Projeto_LPRC5/Projeto_LPRC5.csproj
@@ -110,6 +110,7 @@
     <Compile Include="classeVisitantePrestador.cs" />
     <Compile Include="conexao.cs" />
     <Compile Include="conexaoMySql.cs" />
+    <Compile Include="dbCadastroFuncionarios.cs" />
     <Compile Include="dbCidade.cs" />
     <Compile Include="dbCor.cs" />
     <Compile Include="dbDefault.cs" />
