--- a/Projeto_LPRC5/Projeto_LPRC5.csproj
+++ b/Projeto_LPRC5/Projeto_LPRC5.csproj
@@ -100,6 +100,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Model\Classe\ClasseFornecedor.cs" />
     <Compile Include="Model\Classe\ClasseCadastroFuncionarios.cs" />
     <Compile Include="Model\Classe\classeEncomendas.cs" />
     <Compile Include="Model\Classe\ClasseEstado.cs" />
@@ -107,6 +108,7 @@
     <Compile Include="Model\Classe\classeMarca.cs" />
     <Compile Include="Model\Classe\classeCidade.cs" />
     <Compile Include="Model\Classe\classeClassificaPessoa.cs" />
+    <Compile Include="Model\Conexão\dbFornecedor.cs" />
     <Compile Include="Model\Conexão\dbEmpresaPrestacaoServico.cs" />
     <Compile Include="View\frmEmpresaPrestadoraServico.cs">
       <SubType>Form</SubType>
