Criação de formulário, classe e conexão de Condomínio/Empresa.

--- a/Projeto_LPRC5/Projeto_LPRC5.csproj
+++ b/Projeto_LPRC5/Projeto_LPRC5.csproj
@@ -101,7 +101,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Model\Classe\ClasseFornecedor.cs" />
-    <Compile Include="Model\Classe\ClassCondominioEmpresa.cs" />
+    <Compile Include="Model\Classe\ClasseCondominioEmpresa.cs" />
     <Compile Include="Model\Classe\ClasseCadastroFuncionarios.cs" />
     <Compile Include="Model\Classe\classeEncomendas.cs" />
     <Compile Include="Model\Classe\ClasseEstado.cs" />
