--- a/Projeto_LPRC5/Projeto_LPRC5.csproj
+++ b/Projeto_LPRC5/Projeto_LPRC5.csproj
@@ -53,9 +53,6 @@
       <HintPath>..\packages\K4os.Hash.xxHash.1.0.6\lib\net46\K4os.Hash.xxHash.dll</HintPath>
     </Reference>
     <Reference Include="MySql.Data, Version=8.0.22.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL" />
-    <Reference Include="MySqlConnector, Version=1.0.0.0, Culture=neutral, PublicKeyToken=d33d3e53aa5f8c92, processorArchitecture=MSIL">
-      <HintPath>..\packages\MySqlConnector.1.3.8\lib\net471\MySqlConnector.dll</HintPath>
-    </Reference>
     <Reference Include="Renci.SshNet, Version=2020.0.0.0, Culture=neutral, PublicKeyToken=1cee9f8bde3db106, processorArchitecture=MSIL">
       <HintPath>..\packages\SSH.NET.2020.0.0\lib\net40\Renci.SshNet.dll</HintPath>
     </Reference>
@@ -100,7 +97,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Model\Classe\ClasseFornecedor.cs" />
+    <Compile Include="Model\Classe\classeFornecedor.cs" />
     <Compile Include="Model\Classe\ClasseCondominioEmpresa.cs" />
     <Compile Include="Model\Classe\ClasseCadastroFuncionarios.cs" />
     <Compile Include="Model\Classe\classeEncomendas.cs" />
@@ -112,11 +109,11 @@
     <Compile Include="Model\Conexão\dbFornecedor.cs" />
     <Compile Include="Model\Conexão\dbCondominioEmpresa.cs" />
     <Compile Include="Model\Conexão\dbEmpresaPrestacaoServico.cs" />
-    <Compile Include="View\frmFornecedores.cs">
+    <Compile Include="View\frmFornecedor.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="View\frmFornecedores.Designer.cs">
-      <DependentUpon>frmFornecedores.cs</DependentUpon>
+    <Compile Include="View\frmFornecedor.Designer.cs">
+      <DependentUpon>frmFornecedor.cs</DependentUpon>
     </Compile>
     <Compile Include="View\frmCondominioEmpresa.cs">
       <SubType>Form</SubType>
@@ -251,8 +248,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Model\Classe\classeTipoUsuario.cs" />
     <Compile Include="Controller\util.cs" />
-    <EmbeddedResource Include="View\frmFornecedores.resx">
-      <DependentUpon>frmFornecedores.cs</DependentUpon>
+    <EmbeddedResource Include="View\frmFornecedor.resx">
+      <DependentUpon>frmFornecedor.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\FrmCadastroFuncionarios.resx">
       <DependentUpon>FrmCadastroFuncionarios.cs</DependentUpon>
