classe objeto funcionario

--- a/Projeto_LPRC5/Projeto_LPRC5.csproj
+++ b/Projeto_LPRC5/Projeto_LPRC5.csproj
@@ -103,6 +103,7 @@
     <Compile Include="Model\Classe\classeEncomendas.cs" />
     <Compile Include="Model\Classe\ClasseEstado.cs" />
     <Compile Include="Model\Classe\classeEmpresaPrestadoraServico.cs" />
+    <Compile Include="Model\Classe\classeFuncionario.cs" />
     <Compile Include="Model\Classe\classeMarca.cs" />
     <Compile Include="Model\Classe\classeCidade.cs" />
     <Compile Include="Model\Classe\classeClassificaPessoa.cs" />
