--- a/Projeto_LPRC5/Projeto_LPRC5.csproj
+++ b/Projeto_LPRC5/Projeto_LPRC5.csproj
@@ -111,6 +111,7 @@
     <Compile Include="Model\Conexão\dbCondominioEmpresa.cs" />
     <Compile Include="Model\Conexão\dbEmpresaPrestacaoServico.cs" />
     <Compile Include="Model\Conexão\dbNivelAcesso.cs" />
+    <Compile Include="Model\Conexão\dbOpcaoAcesso.cs" />
     <Compile Include="View\frmFornecedor.cs">
       <SubType>Form</SubType>
     </Compile>
