Criação do CRUD dbFuncionario

--- a/Projeto_LPRC5/Projeto_LPRC5.csproj
+++ b/Projeto_LPRC5/Projeto_LPRC5.csproj
@@ -97,6 +97,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Model\Conexão\dbFuncionario.cs" />
     <Compile Include="Model\Classe\classeFornecedor.cs" />
     <Compile Include="Model\Classe\ClasseCondominioEmpresa.cs" />
     <Compile Include="Model\Classe\ClasseCadastroFuncionarios.cs" />
