--- a/Projeto_LPRC5/Projeto_LPRC5.csproj
+++ b/Projeto_LPRC5/Projeto_LPRC5.csproj
@@ -114,6 +114,12 @@
     <Compile Include="Model\Conexão\dbEmpresaPrestacaoServico.cs" />
     <Compile Include="Model\Conexão\dbNivelAcesso.cs" />
     <Compile Include="Model\Conexão\dbOpcaoAcesso.cs" />
+    <Compile Include="View\FrmOpcaoAcesso.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\FrmOpcaoAcesso.designer.cs">
+      <DependentUpon>FrmOpcaoAcesso.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\frmFornecedor.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -265,6 +271,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Model\Classe\classeTipoUsuario.cs" />
     <Compile Include="Controller\util.cs" />
+    <EmbeddedResource Include="View\FrmOpcaoAcesso.resx">
+      <DependentUpon>FrmOpcaoAcesso.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="View\frmFornecedor.resx">
       <DependentUpon>frmFornecedor.cs</DependentUpon>
     </EmbeddedResource>
