--- a/Projeto_LPRC5/Projeto_LPRC5.csproj
+++ b/Projeto_LPRC5/Projeto_LPRC5.csproj
@@ -115,6 +115,12 @@
     <Compile Include="Model\Conexão\dbEmpresaPrestacaoServico.cs" />
     <Compile Include="Model\Conexão\dbNivelAcesso.cs" />
     <Compile Include="Model\Conexão\dbOpcaoAcesso.cs" />
+    <Compile Include="View\frmNivelAcesso.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\frmNivelAcesso.Designer.cs">
+      <DependentUpon>frmNivelAcesso.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\FrmOpcaoAcesso.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -272,6 +278,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Model\Classe\classeTipoUsuario.cs" />
     <Compile Include="Controller\util.cs" />
+    <EmbeddedResource Include="View\frmNivelAcesso.resx">
+      <DependentUpon>frmNivelAcesso.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="View\FrmOpcaoAcesso.resx">
       <DependentUpon>FrmOpcaoAcesso.cs</DependentUpon>
     </EmbeddedResource>
