--- a/Projeto_LPRC5/Projeto_LPRC5.csproj
+++ b/Projeto_LPRC5/Projeto_LPRC5.csproj
@@ -52,7 +52,7 @@
     <Reference Include="K4os.Hash.xxHash, Version=1.0.6.0, Culture=neutral, PublicKeyToken=32cd54395057cec3, processorArchitecture=MSIL">
       <HintPath>..\packages\K4os.Hash.xxHash.1.0.6\lib\net46\K4os.Hash.xxHash.dll</HintPath>
     </Reference>
-    <Reference Include="MySql.Data, Version=8.0.24.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL" />
+    <Reference Include="MySql.Data, Version=8.0.22.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL" />
     <Reference Include="Renci.SshNet, Version=2020.0.0.0, Culture=neutral, PublicKeyToken=1cee9f8bde3db106, processorArchitecture=MSIL">
       <HintPath>..\packages\SSH.NET.2020.0.0\lib\net40\Renci.SshNet.dll</HintPath>
     </Reference>
@@ -99,6 +99,8 @@
   <ItemGroup>
     <Compile Include="Model\Classe\classeNivelAcesso.cs" />
     <Compile Include="Model\Classe\classeOpcaoAcesso.cs" />
+    <Compile Include="Model\Classe\classePessoa.cs" />
+    <Compile Include="Model\Classe\classePessoaJuridica.cs" />
     <Compile Include="Model\Conexão\dbFuncionario.cs" />
     <Compile Include="Model\Classe\classeFornecedor.cs" />
     <Compile Include="Model\Classe\ClasseCondominioEmpresa.cs" />
@@ -115,6 +117,14 @@
     <Compile Include="Model\Conexão\dbEmpresaPrestacaoServico.cs" />
     <Compile Include="Model\Conexão\dbNivelAcesso.cs" />
     <Compile Include="Model\Conexão\dbOpcaoAcesso.cs" />
+    <Compile Include="Model\Conexão\dbPessoa.cs" />
+    <Compile Include="Model\Conexão\dbPessoaJuridica.cs" />
+    <Compile Include="View\frmEmpresa.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\frmEmpresa.designer.cs">
+      <DependentUpon>frmEmpresa.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\frmNivelAcesso.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -278,6 +288,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Model\Classe\classeTipoUsuario.cs" />
     <Compile Include="Controller\util.cs" />
+    <EmbeddedResource Include="View\frmEmpresa.resx">
+      <DependentUpon>frmEmpresa.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="View\frmNivelAcesso.resx">
       <DependentUpon>frmNivelAcesso.cs</DependentUpon>
     </EmbeddedResource>
