--- a/Projeto_LPRC5/Projeto_LPRC5.csproj
+++ b/Projeto_LPRC5/Projeto_LPRC5.csproj
@@ -100,7 +100,11 @@
     <Compile Include="Model\Classe\classeNivelAcesso.cs" />
     <Compile Include="Model\Classe\classeOpcaoAcesso.cs" />
     <Compile Include="Model\Classe\classePessoa.cs" />
+    <Compile Include="Model\Classe\classePessoaFisica.cs" />
     <Compile Include="Model\Classe\classePessoaJuridica.cs" />
+    <Compile Include="Model\Classe\classePrestador.cs" />
+    <Compile Include="Model\Classe\classeTipoVisitante.cs" />
+    <Compile Include="Model\Classe\classeVisitantes.cs" />
     <Compile Include="Model\Conexão\dbFuncionario.cs" />
     <Compile Include="Model\Classe\classeFornecedor.cs" />
     <Compile Include="Model\Classe\ClasseCondominioEmpresa.cs" />
@@ -118,6 +122,7 @@
     <Compile Include="Model\Conexão\dbNivelAcesso.cs" />
     <Compile Include="Model\Conexão\dbOpcaoAcesso.cs" />
     <Compile Include="Model\Conexão\dbPessoa.cs" />
+    <Compile Include="Model\Conexão\dbPessoaFisica.cs" />
     <Compile Include="Model\Conexão\dbPessoaJuridica.cs" />
     <Compile Include="View\frmEmpresa.cs">
       <SubType>Form</SubType>
@@ -160,7 +165,6 @@
     <Compile Include="Model\Classe\classeDefault.cs" />
     <Compile Include="Model\Classe\ClasseVeiculo.cs" />
     <Compile Include="Model\Classe\classeVeiculoModelo.cs" />
-    <Compile Include="Model\Classe\classeVisitantePrestador.cs" />
     <Compile Include="Model\Conexão\conexao.cs" />
     <Compile Include="Model\Conexão\conexaoMySql.cs" />
     <Compile Include="Model\Conexão\dbCadastroFuncionarios.cs" />
@@ -197,6 +201,18 @@
     </Compile>
     <Compile Include="View\frmPermissaoAcesso.Designer.cs">
       <DependentUpon>frmPermissaoAcesso.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\frmPrestador.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\frmPrestador.Designer.cs">
+      <DependentUpon>frmPrestador.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\frmTipoVisitante.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\frmTipoVisitante.Designer.cs">
+      <DependentUpon>frmTipoVisitante.cs</DependentUpon>
     </Compile>
     <Compile Include="View\FrmVeiculo.cs">
       <SubType>Form</SubType>
@@ -288,6 +304,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Model\Classe\classeTipoUsuario.cs" />
     <Compile Include="Controller\util.cs" />
+    <Compile Include="View\frmVisitantes.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\frmVisitantes.Designer.cs">
+      <DependentUpon>frmVisitantes.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="View\frmEmpresa.resx">
       <DependentUpon>frmEmpresa.cs</DependentUpon>
     </EmbeddedResource>
@@ -317,6 +339,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="View\frmPermissaoAcesso.resx">
       <DependentUpon>frmPermissaoAcesso.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\frmPrestador.resx">
+      <DependentUpon>frmPrestador.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\frmTipoVisitante.resx">
+      <DependentUpon>frmTipoVisitante.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\FrmVeiculo.resx">
       <DependentUpon>FrmVeiculo.cs</DependentUpon>
@@ -369,6 +397,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="View\frmVisitantes.resx">
+      <DependentUpon>frmVisitantes.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
