--- a/Projeto_LPRC5/Projeto_LPRC5.csproj
+++ b/Projeto_LPRC5/Projeto_LPRC5.csproj
@@ -52,7 +52,9 @@
     <Reference Include="K4os.Hash.xxHash, Version=1.0.6.0, Culture=neutral, PublicKeyToken=32cd54395057cec3, processorArchitecture=MSIL">
       <HintPath>..\packages\K4os.Hash.xxHash.1.0.6\lib\net46\K4os.Hash.xxHash.dll</HintPath>
     </Reference>
-    <Reference Include="MySql.Data, Version=8.0.22.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL" />
+    <Reference Include="MySql.Data, Version=8.0.24.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
+      <HintPath>..\packages\MySql.Data.8.0.24\lib\net452\MySql.Data.dll</HintPath>
+    </Reference>
     <Reference Include="Renci.SshNet, Version=2020.0.0.0, Culture=neutral, PublicKeyToken=1cee9f8bde3db106, processorArchitecture=MSIL">
       <HintPath>..\packages\SSH.NET.2020.0.0\lib\net40\Renci.SshNet.dll</HintPath>
     </Reference>
@@ -104,6 +106,8 @@
     <Compile Include="Model\Classe\classePessoaJuridica.cs" />
     <Compile Include="Model\Classe\classePrestador.cs" />
     <Compile Include="Model\Classe\classeTipoVisitante.cs" />
+    <Compile Include="Model\Classe\ClasseVeiculoMarca.cs" />
+    <Compile Include="Model\Classe\ClasseVeiculoPessoa.cs" />
     <Compile Include="Model\Classe\classeVisitantes.cs" />
     <Compile Include="Model\Conexão\dbFuncionario.cs" />
     <Compile Include="Model\Classe\classeFornecedor.cs" />
@@ -124,6 +128,9 @@
     <Compile Include="Model\Conexão\dbPessoa.cs" />
     <Compile Include="Model\Conexão\dbPessoaFisica.cs" />
     <Compile Include="Model\Conexão\dbPessoaJuridica.cs" />
+    <Compile Include="Model\Conexão\DbVeiculo.cs" />
+    <Compile Include="Model\Conexão\DbVeiculoMarca.cs" />
+    <Compile Include="Model\Conexão\DbVeiculoPessoa.cs" />
     <Compile Include="View\frmEmpresa.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -160,24 +167,24 @@
     <Compile Include="View\frmEmpresaPrestadoraServico.Designer.cs">
       <DependentUpon>frmEmpresaPrestadoraServico.cs</DependentUpon>
     </Compile>
-    <Compile Include="Model\Classe\classeCor.cs" />
+    <Compile Include="Model\Classe\ClasseCor.cs" />
     <Compile Include="Model\Classe\classeFeriado.cs" />
     <Compile Include="Model\Classe\classeDefault.cs" />
     <Compile Include="Model\Classe\ClasseVeiculo.cs" />
-    <Compile Include="Model\Classe\classeVeiculoModelo.cs" />
+    <Compile Include="Model\Classe\ClasseVeiculoModelo.cs" />
     <Compile Include="Model\Conexão\conexao.cs" />
     <Compile Include="Model\Conexão\conexaoMySql.cs" />
     <Compile Include="Model\Conexão\dbCadastroFuncionarios.cs" />
     <Compile Include="Model\Conexão\dbCidade.cs" />
     <Compile Include="Model\Conexão\dbClassificaPessoa.cs" />
-    <Compile Include="Model\Conexão\dbCor.cs" />
+    <Compile Include="Model\Conexão\DbCor.cs" />
     <Compile Include="Model\Conexão\dbDefault.cs" />
     <Compile Include="Model\Conexão\dbEncomenda.cs" />
     <Compile Include="Model\Conexão\DbEstado.cs" />
     <Compile Include="Model\Conexão\dbFeriado.cs" />
     <Compile Include="Model\Conexão\dbMarca.cs" />
     <Compile Include="Model\Conexão\dbTipoUsuario.cs" />
-    <Compile Include="Model\Conexão\dbVeiculoModelo.cs" />
+    <Compile Include="Model\Conexão\DbVeiculoModelo.cs" />
     <Compile Include="View\FrmCadastroFuncionarios.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -214,11 +221,23 @@
     <Compile Include="View\frmTipoVisitante.Designer.cs">
       <DependentUpon>frmTipoVisitante.cs</DependentUpon>
     </Compile>
+    <Compile Include="View\FrmVeiculoPessoa.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\FrmVeiculoPessoa.designer.cs">
+      <DependentUpon>FrmVeiculoPessoa.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\FrmVeiculo.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="View\FrmVeiculo.designer.cs">
       <DependentUpon>FrmVeiculo.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\FrmVeiculoMarca.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\FrmVeiculoMarca.designer.cs">
+      <DependentUpon>FrmVeiculoMarca.cs</DependentUpon>
     </Compile>
     <Compile Include="View\frmVeiculoModelo .cs">
       <SubType>Form</SubType>
@@ -346,8 +365,14 @@
     <EmbeddedResource Include="View\frmTipoVisitante.resx">
       <DependentUpon>frmTipoVisitante.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="View\FrmVeiculoPessoa.resx">
+      <DependentUpon>FrmVeiculoPessoa.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="View\FrmVeiculo.resx">
       <DependentUpon>FrmVeiculo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\FrmVeiculoMarca.resx">
+      <DependentUpon>FrmVeiculoMarca.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\frmVeiculoModelo .resx">
       <DependentUpon>frmVeiculoModelo .cs</DependentUpon>
